Existing *.md files converted to pages, and a starting menu.

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "HOT FHIR Projects"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "HOT FHIR Projects"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -293,3 +293,12 @@ defaults:
       comments: # true
       share: true
       related: true
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: "splash"
+
+collections:
+  pages:
+    output: ture
