--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -94,7 +94,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "github.com/hot-fhir-projects/hfp"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "github.com/hot-fhir-project"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
