Set www.hotecosystem.org URL

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,10 +11,10 @@ description: HOT Website
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-url: "https://data2health.github.io"
+url: "https://www.hotecosystem.org"
 
 # baseurl should be an empty string
-baseurl: "/hot-fhir-projects"
+baseurl: "/"
 
 # --- Navigation bar options --- #
 
@@ -94,7 +94,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "github.com/hot-fhir-project"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "www.hotecosystem.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
