--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Health Open Terminology (HOT) Ecosystem
+title: Health Open Terminology Ecosystem
 
 # Short description of your site
 description: HOT Website
